--- a/app/src/main/res/layout/fragment_bkrd.xml
+++ b/app/src/main/res/layout/fragment_bkrd.xml
@@ -171,6 +171,15 @@
             </LinearLayout>
 
             <TextView
+                android:id="@+id/errorTextEditTextNumber2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:textColor="#FF0000"
+                android:fontFamily="@font/regular"
+                android:layout_marginTop="3dp"/>
+
+            <TextView
                 android:id="@+id/textViewTerm"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
