--- a/app/src/main/res/layout/fragment_bkrd.xml
+++ b/app/src/main/res/layout/fragment_bkrd.xml
@@ -282,6 +282,16 @@
                 app:backgroundTint="@drawable/edit_text_line_color"
                 android:visibility="gone"/>
 
+            <TextView
+                android:id="@+id/errorTextEditTextNumber4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:textColor="#FF0000"
+                android:fontFamily="@font/regular"
+                android:layout_marginTop="3dp"
+                android:visibility="gone"/>
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
