--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,6 +45,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:gravity="center"
+                    android:layout_marginBottom="130dp"
                     android:fontFamily="@font/bold" />
             </LinearLayout>
         </ScrollView>
