--- a/app/src/main/res/layout/fragment_bkrd.xml
+++ b/app/src/main/res/layout/fragment_bkrd.xml
@@ -347,6 +347,18 @@
                 android:layout_gravity="center_horizontal"/>
 
             <TextView
+                android:id="@+id/annualInterestError"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="25dp"
+                android:text="Annual Interest Error"
+                android:fontFamily="@font/bold"
+                android:textSize="16sp"
+                android:textColor="@color/red"
+                android:visibility="gone"
+                android:layout_gravity="center_horizontal"/>
+
+            <TextView
                 android:id="@+id/totalDepositHeading"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
