--- a/app/src/main/res/layout/dialog_color_scheme.xml
+++ b/app/src/main/res/layout/dialog_color_scheme.xml
@@ -4,7 +4,10 @@
     android:layout_height="wrap_content"
     style="@style/wndowBgScreen"
     android:orientation="vertical"
-    android:padding="18dp">
+    android:paddingStart="18dp"
+    android:paddingEnd="18dp"
+    android:paddingTop="18dp"
+    android:paddingBottom="0dp">
 
     <!-- Heading TextView -->
     <TextView
@@ -18,6 +21,12 @@
         android:layout_marginTop="6dp"
         android:layout_marginStart="4dp"
         android:layout_marginBottom="16dp" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginBottom="10dp"
+        android:background="@color/line_grey" />
 
     <RadioGroup
         android:id="@+id/radio_group_color_scheme"
@@ -51,16 +60,25 @@
             android:fontFamily="@font/regular"
             android:text="@string/dark"
             android:padding="10dp"
+            android:layout_marginBottom="10dp"
             android:textSize="13.5dp"/>
     </RadioGroup>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/line_grey" />
 
     <Button
         android:id="@+id/button_ok"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/ok"
+        android:textSize="13dp"
         android:fontFamily="@font/bold"
         style="@style/textColor"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
         android:layout_gravity="end"
         android:background="?attr/selectableItemBackground" />
 </LinearLayout>
