--- a/app/src/main/res/layout/dialog_language.xml
+++ b/app/src/main/res/layout/dialog_language.xml
@@ -15,28 +15,28 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/App_Language"
-        android:textSize="20sp"
+        android:textSize="19sp"
         style="@style/textColor"
         android:fontFamily="@font/bold"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="6dp"
         android:layout_marginStart="4dp"
-        android:layout_marginBottom="18dp" />
+        android:layout_marginBottom="16dp" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:layout_marginBottom="10dp"
         android:background="@color/line_grey" />
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="320dp"
+        android:layout_height="wrap_content"
         android:scrollbars="none">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingTop="10dp">
+            android:orientation="vertical">
 
             <RadioGroup
                 android:id="@+id/radio_group_language"
@@ -45,7 +45,7 @@
                 android:orientation="vertical">
 
                 <RadioButton
-                    android:id="@+id/radio_english"
+                    android:id="@+id/radio_default_english"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/system_default"
@@ -55,30 +55,22 @@
                     android:checked="true" />
 
                 <RadioButton
-                    android:id="@+id/radio_spanish"
+                    android:id="@+id/radio_english"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/regular"
-                    android:text="Spanish"
+                    android:text="@string/lang_english"
                     android:padding="10dp"
                     android:textSize="15sp"/>
 
                 <RadioButton
-                    android:id="@+id/radio_french"
+                    android:id="@+id/radio_hindi"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/regular"
-                    android:text="French"
+                    android:text="@string/lang_hindi"
                     android:padding="10dp"
-                    android:textSize="15sp"/>
-
-                <RadioButton
-                    android:id="@+id/radio_marathi"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/regular"
-                    android:text="Marathi"
-                    android:padding="10dp"
+                    android:layout_marginBottom="10dp"
                     android:textSize="15sp"/>
 
             </RadioGroup>
@@ -95,10 +87,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/ok"
+        android:textSize="13dp"
         android:fontFamily="@font/bold"
         style="@style/textColor"
         android:layout_gravity="end"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="5dp"
         android:layout_marginBottom="8dp"
         android:background="?attr/selectableItemBackground" />
 </LinearLayout>
