--- a/app/src/main/res/layout/dialog_sendsuggestionmail.xml
+++ b/app/src/main/res/layout/dialog_sendsuggestionmail.xml
@@ -4,7 +4,10 @@
     android:layout_height="wrap_content"
     style="@style/wndowBgScreen"
     android:orientation="vertical"
-    android:padding="18dp">
+    android:paddingLeft="18dp"
+    android:paddingRight="18dp"
+    android:paddingTop="18dp"
+    android:paddingBottom="8dp">
 
     <!-- Heading TextView -->
     <TextView
@@ -15,9 +18,9 @@
         android:textSize="19sp"
         style="@style/textColor"
         android:fontFamily="@font/bold"
-        android:layout_marginTop="3dp"
+        android:layout_marginTop="6dp"
         android:layout_marginStart="4dp"
-        android:layout_marginBottom="10dp"/>
+        android:layout_marginBottom="16dp"/>
 
     <TextView
         android:id="@+id/selected_theme_text"
@@ -49,6 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/buttonSend"
+        android:textSize="15dp"
         android:fontFamily="@font/bold"
         style="@style/textColor"
         android:layout_gravity="end"
