--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -100,6 +100,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/slogan_text"
                 style="@style/textColor"
+                android:textSize="17sp"
                 android:layout_marginBottom="10dp"
                 android:layout_gravity="center" />
 
@@ -108,7 +109,7 @@
                 android:layout_height="1dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="15dp"
                 android:background="@color/line_grey" />
 
             <!-- Navigation Items (Share, Rate, More Apps) -->
@@ -138,7 +139,7 @@
                     android:text="@string/share"
                     style="@style/textColor"
                     android:fontFamily="@font/regular"
-                    android:textSize="14dp" />
+                    android:textSize="17sp" />
             </LinearLayout>
 
             <LinearLayout
@@ -167,7 +168,7 @@
                     android:text="@string/rate"
                     style="@style/textColor"
                     android:fontFamily="@font/regular"
-                    android:textSize="14dp" />
+                    android:textSize="17sp" />
             </LinearLayout>
 
             <LinearLayout
@@ -195,7 +196,7 @@
                     android:text="@string/more"
                     style="@style/textColor"
                     android:fontFamily="@font/regular"
-                    android:textSize="14dp" />
+                    android:textSize="17sp" />
             </LinearLayout>
 
             <View
@@ -239,7 +240,7 @@
                     android:text="@string/settings"
                     style="@style/textColor"
                     android:fontFamily="@font/regular"
-                    android:textSize="14dp" />
+                    android:textSize="17sp" />
             </LinearLayout>
         </LinearLayout>
     </com.google.android.material.navigation.NavigationView>
