--- a/app/src/main/res/layout/dialog_language.xml
+++ b/app/src/main/res/layout/dialog_language.xml
@@ -15,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/App_Language"
-        android:textSize="19sp"
+        android:textSize="20sp"
         style="@style/textColor"
         android:fontFamily="@font/bold"
         android:layout_marginTop="6dp"
@@ -49,7 +49,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/system_default"
-                    android:textSize="15sp"
+                    android:textSize="14.5dp"
                     android:padding="10dp"
                     android:fontFamily="@font/regular"
                     android:checked="true" />
@@ -61,7 +61,7 @@
                     android:fontFamily="@font/regular"
                     android:text="@string/lang_english"
                     android:padding="10dp"
-                    android:textSize="15sp"/>
+                    android:textSize="14.5dp"/>
 
                 <RadioButton
                     android:id="@+id/radio_hindi"
@@ -71,7 +71,7 @@
                     android:text="@string/lang_hindi"
                     android:padding="10dp"
                     android:layout_marginBottom="10dp"
-                    android:textSize="15sp"/>
+                    android:textSize="14.5dp"/>
 
             </RadioGroup>
         </LinearLayout>
