--- a/app/src/main/res/layout/dialog_sendsuggestionmail.xml
+++ b/app/src/main/res/layout/dialog_sendsuggestionmail.xml
@@ -15,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/contact"
-        android:textSize="19sp"
+        android:textSize="20sp"
         style="@style/textColor"
         android:fontFamily="@font/bold"
         android:layout_marginTop="6dp"
@@ -26,7 +26,7 @@
         android:id="@+id/selected_theme_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="14sp"
+        android:textSize="14.5dp"
         style="@style/selectedTextColor"
         android:text="@string/contactDiaNote"
         android:textColor="@color/red"
