--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -199,6 +199,34 @@
                     android:textSize="17sp" />
             </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/upgradeToPremium"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:padding="14dp"
+                android:clickable="true"
+                android:focusable="true"
+                android:background="@drawable/ripple_effect">
+
+                <ImageView
+                    android:layout_marginStart="15dp"
+                    android:layout_width="23dp"
+                    android:layout_height="23dp"
+                    android:src="@drawable/ic_more_apps"
+                    style="@style/icColor" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginTop="3.5dp"
+                    android:text="@string/upgradeToPremium"
+                    style="@style/textColor"
+                    android:fontFamily="@font/regular"
+                    android:textSize="17sp" />
+            </LinearLayout>
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
