--- a/app/src/main/res/layout/emphike.xml
+++ b/app/src/main/res/layout/emphike.xml
@@ -55,7 +55,7 @@
                     android:id="@+id/empIncrementPercentageRadioButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/EmpPercentage"
+                    android:text="@string/EmpPercentageRadio"
                     android:fontFamily="@font/regular"
                     android:textSize="15sp"/>
             </RadioGroup>
