--- a/app/src/main/res/layout/emphike.xml
+++ b/app/src/main/res/layout/emphike.xml
@@ -26,8 +26,8 @@
                 android:id="@+id/empIncrementHeading"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Employee Increment"
-                android:textSize="20sp"
+                android:text="@string/empSalaryIncrement"
+                android:textSize="22sp"
                 android:textColor="@color/darkGreen"
                 android:fontFamily="@font/bold"
                 android:textStyle="bold"
@@ -76,7 +76,7 @@
                 android:id="@+id/empIncrementCTCTextBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Rs."
+                android:hint="@string/Rs"
                 android:inputType="numberDecimal"
                 android:textAlignment="textStart"
                 android:digits="0123456789."
@@ -100,7 +100,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="25dp"
                 android:layout_marginStart="4dp"
-                android:text="@string/EmpIncrementPercentage"
+                android:text="@string/empIncrementPercent"
                 android:textSize="15sp"
                 android:fontFamily="@font/regular"
                 style="@style/selectedTextColor"
@@ -110,7 +110,7 @@
                     android:id="@+id/empIncrementPercentageTextBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="%"
+                    android:hint="@string/percentageSymbol"
                     android:inputType="numberDecimal"
                     android:textAlignment="textStart"
                     android:digits="0123456789."
@@ -186,7 +186,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="25dp"
-                android:text="@string/IncrementSummeryCurrentCTCHeading"
+                android:text="@string/empIncrementChartIndicator1"
                 android:fontFamily="@font/regular"
                 android:textSize="15sp"
                 android:textColor="#808080"
