--- a/app/src/main/res/layout/empsalaryinput.xml
+++ b/app/src/main/res/layout/empsalaryinput.xml
@@ -34,6 +34,32 @@
                 android:layout_marginBottom="16dp"
                 android:layout_gravity="center_horizontal" />
 
+            <RadioGroup
+                android:id="@+id/empIncrementRadioGroup"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center">
+
+                <RadioButton
+                    android:id="@+id/empIncrementAmtRadioButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/EmpAmountRadio"
+                    android:layout_marginEnd="30dp"
+                    android:fontFamily="@font/regular"
+                    android:textSize="15sp"
+                    android:checked="true"/>
+
+                <RadioButton
+                    android:id="@+id/empIncrementPercentageRadioButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/EmpPercentageRadio"
+                    android:fontFamily="@font/regular"
+                    android:textSize="15sp"/>
+            </RadioGroup>
+
             <TextView
                 android:id="@+id/empSalaryCTCeditText1Heading"
                 android:layout_width="wrap_content"
@@ -63,12 +89,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
-                android:layout_marginBottom="15dp"
+                android:layout_marginBottom="10dp"
                 android:fontFamily="@font/regular"
                 android:textColor="#FF0000"
                 android:layout_marginTop="3dp"/>
 
             <LinearLayout
+                android:id="@+id/bonusIncludeOption"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
@@ -145,7 +172,7 @@
                 android:id="@+id/empSalaryMonthlyTaxeditTextHeading"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="25dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginStart="4dp"
                 android:text="@string/EmpMomthlyTax"
                 android:textSize="15sp"
@@ -311,7 +338,8 @@
                 android:layout_height="38dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginTop="10dp"
-                android:text="@string/AddDeductionBtn"                android:layout_gravity="center"
+                android:text="@string/AddDeductionBtn"
+                android:layout_gravity="center"
                 android:textSize="15sp"
                 android:fontFamily="@font/regular"
                 android:background="@drawable/curve_box" />
