--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -78,11 +78,13 @@
 
             <!-- User profile image -->
             <ImageView
-                android:layout_width="150dp"
-                android:layout_height="120dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:layout_marginTop="50dp"
                 android:layout_gravity="center"
-                android:src="?attr/logoDrawable" />
+                android:src="?attr/logoDrawable"
+                android:background="@drawable/rounded_corners"
+                android:clipToOutline="true"/>
 
             <!-- App name -->
             <TextView
