--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -84,12 +84,12 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/about_message"
-                android:textSize="15sp"
-                android:textColor="?attr/android:textColorPrimary"
+                android:layout_marginBottom="5dp"
                 android:fontFamily="@font/regular"
                 android:lineSpacingExtra="5dp"
-                android:layout_marginBottom="5dp"/>
+                android:text="@string/about_message"
+                android:textColor="?attr/android:textColorPrimary"
+                android:textSize="15sp" />
 
             <!-- Heart Icon Separator -->
             <ImageView
@@ -210,7 +210,7 @@
             android:layout_height="wrap_content"
             android:text="@string/developedby"
             android:textSize="12sp"
-            android:textColor="?attr/android:textColorPrimary"
+            android:textColor="#808080"
             android:fontFamily="@font/regular"/>
 
         <TextView
