--- a/app/src/main/res/layout/dialog_sendsuggestionmail.xml
+++ b/app/src/main/res/layout/dialog_sendsuggestionmail.xml
@@ -26,7 +26,7 @@
         android:id="@+id/selected_theme_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="14.5dp"
+        android:textSize="12.5dp"
         style="@style/selectedTextColor"
         android:text="@string/contactDiaNote"
         android:textColor="@color/red"
@@ -34,27 +34,65 @@
         android:layout_marginStart="4dp"
         android:layout_marginBottom="10dp" />
 
-    <EditText
-        android:hint="@string/seggestionName"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/suggestionName" />
+        android:orientation="horizontal"
+        android:layout_marginBottom="10dp">
+
+        <EditText
+            android:id="@+id/suggestionName"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="4dp"
+            android:layout_weight="1"
+            android:hint="@string/seggestionName"
+            android:maxLength="20" />
+
+        <Spinner
+            android:id="@+id/mailSubject"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1.1"
+            android:spinnerMode="dropdown"
+            android:entries="@array/dropdown_subjectContact"
+            android:layout_marginStart="4dp" />
+    </LinearLayout>
 
     <EditText
+        android:id="@+id/suggestionMessage"
         android:lines="4"
         android:hint="@string/seggestionMessage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/suggestionMessage" />
+        android:maxLength="1000"/>
 
-    <Button
-        android:id="@+id/buttonSend"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/buttonSend"
-        android:textSize="15dp"
-        android:fontFamily="@font/bold"
-        style="@style/textColor"
-        android:layout_gravity="end"
-        android:background="?attr/selectableItemBackground" />
+        android:orientation="horizontal"
+        android:gravity="end|center_vertical">
+
+        <TextView
+            android:id="@+id/characterCountTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="1000 characters remaining"
+            android:textSize="12sp"
+            android:layout_gravity="top"
+            android:textColor="#757575"
+            android:paddingStart="4dp" />
+
+        <Button
+            android:id="@+id/buttonSend"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/buttonSend"
+            android:textSize="15sp"
+            android:fontFamily="@font/bold"
+            style="@style/textColor"
+            android:background="?attr/selectableItemBackground" />
+    </LinearLayout>
+
 </LinearLayout>
